--- a/app/views/projects/_projects_form.html.erb
+++ b/app/views/projects/_projects_form.html.erb
@@ -3,7 +3,7 @@
   <h1 class="d-flex fw-bold justify-content-center mb-8"><%= t("projects.edit.edit_project")%></h1>
   <div class = "col-md-6 mx-auto">
     <div class="mb-3">
-      <%= f.label :name, t("project.form.name"), class: "form-label" %>
+      <%= f.label :name, t("project.form.name"), class: "form-label required" %>
       <%= f.text_field :name, class: "form-control #{invalid(@project, :name)}" %>
       <p class="error"><%= show_errors(@project, :name) %></p>
     </div>
@@ -12,28 +12,32 @@
       <%= f.text_area :description, class: "form-control #{invalid(@project, :description)}" %>
       <p class="error"><%= show_errors(@project, :description) %></p>
     </div>
-    <div class="mb-3">
-      <%= f.label :status, t("project.form.status.status"), class: "form-label" %>
-      <%= f.select :status, status_select, {:prompt => t("project.form.select_status")}, class: "form-select #{invalid(@project, :status)}" %>
-      <p class="error"><%= show_errors(@project, :status) %></p>
+    <div class="mb-3 row justify-content-between">
+      <div class="col-5">
+        <%= f.label :start_date, t("project.form.start_date"), class: "form-label" %>
+        <%= f.date_field :start_date, class: "form-control #{invalid(@project, :start_date_date)}" %>
+        <p class="error"><%= show_errors(@project, :start_date) %></p>
+      </div>
+      <div class="col-5">
+        <%= f.label :end_date, t("project.form.end_date"), class: "form-label" %>
+        <%= f.date_field :end_date, class: "form-control #{invalid(@project, :end_date)}" %>
+        <p class="error"><%= show_errors(@project, :end_date) %></p>
+      </div>
+    </div>
+    <div class="mb-3 row justify-content-between">
+      <div class="col-5">
+        <%= f.label :status, t("project.form.status.status"), class: "form-label required" %>
+        <%= f.select :status, status_select, {:prompt => t("project.form.select_status")}, class: "form-select #{invalid(@project, :status)}" %>
+        <p class="error"><%= show_errors(@project, :status) %></p>
+      </div>
+      <div class = "col-5">
+        <%= f.label :group_id, t("project.form.group"), class: "form-label required" %>
+        <%= f.select :group_id, group_select, {}, class: "form-select #{invalid(@project, :group_id)}" %>
+        <p class="error"><%= show_errors(@project, :group_id) %></p>
+      </div>
     </div>
     <div class="mb-3">
-      <%= f.label :start_date, t("project.form.start_date"), class: "form-label" %>
-      <%= f.date_field :start_date, class: "form-control #{invalid(@project, :start_date_date)}" %>
-      <p class="error"><%= show_errors(@project, :start_date) %></p>
-    </div>
-    <div class="mb-3">
-      <%= f.label :end_date, t("project.form.end_date"), class: "form-label" %>
-      <%= f.date_field :end_date, class: "form-control #{invalid(@project, :end_date)}" %>
-      <p class="error"><%= show_errors(@project, :end_date) %></p>
-    </div>
-    <div class="mb-3">
-      <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
-      <%= f.select :group_id, group_select, {}, class: "form-select #{invalid(@project, :group_id)}" %>
-      <p class="error"><%= show_errors(@project, :group_id) %></p>
-    </div>
-    <div class="mb-3">
-      <%= f.label :language, t("project.form.language"), class: "form-label" %>
+      <%= f.label :language, t("project.form.language"), class: "form-label required" %>
       <%= f.text_field :language, class: "form-control #{invalid(@project, :language)}" %>
       <p class="error"><%= show_errors(@project, :language) %></p>
     </div>
@@ -58,16 +62,16 @@
       <p class="error"><%= show_errors(@project, :customers) %></p>
     </div>
     <div class="mb-3">
-      <label class="form-label mb-2"><%= t("project.form.project_detail") %></div>
+      <label class="form-label mb-2"><%= t("project.form.project_detail") %></label>
       <div class="my-2" data-controller="nested-rondo" data-associated-with="project_environments">
         <div data-nested-rondo-target="fieldContain">
           <%= f.fields_for :project_environments do |detail| %>
             <%= render "project_environment_fields", f: detail %>
           <% end %>
         </div>
-        <div class="links">
-          <%= link_to_add_association f, :project_environments do %>
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="bi bi-plus-circle" width="1.5em" height="1.5em" data-association="project_environment" >
+        <div class="links row justify-content-center p-0">
+          <%= link_to_add_association f, :project_environments, class: "rounded-circle btn-outline-primary  btn w-auto row justify-content-center p-0" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="bi bi-plus-circle p-0" width="2em" height="2em" data-association="project_environment" >
               <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" data-association="project_environment" />
             </svg>
           <% end %>
