--- a/app/views/reports/update.turbo_stream.erb
+++ b/app/views/reports/update.turbo_stream.erb
@@ -2,8 +2,9 @@
 <%= turbo_stream.update "flash_message" do %>
   <%= render "shared/flash_message" %>
 <% end %>
-
-<%= turbo_stream.update "report-#{@report.id}-project-name", @report.project_name %>
-<%= turbo_stream.update "report-#{@report.id}-date", format_date(@report.date) %>
-<%= turbo_stream.update "report-#{@report.id}-issue", @report.issue %>
-<%= turbo_stream.update "report-#{@report.id}-description", @report.description %>
+<% unless @report.errors.any? %>
+  <%= turbo_stream.update "report-#{@report.id}-project-name", @report.project_name %>
+  <%= turbo_stream.update "report-#{@report.id}-date", format_date(@report.date) %>
+  <%= turbo_stream.update "report-#{@report.id}-issue", @report.issue %>
+  <%= turbo_stream.update "report-#{@report.id}-description", @report.description %>
+<% end %>
