--- a/app/views/resources/_project_user_resource_fields.html.erb
+++ b/app/views/resources/_project_user_resource_fields.html.erb
@@ -8,8 +8,8 @@
     <div class="col-4">
       <%= f.number_field :percentage , class: "form-control", placeholder: t(".effort"),max: Settings.number.value_100, min: Settings.number.value_0, required: true %>
     </div>
-  </div>
-  <div class="ms-10">
-    <%= link_to_remove_association t(".remove"), f %>
+    <div class="col-1 d-flex align-items-center">
+      <%= link_to_remove_association t(".remove"), f %>
+    </div>
   </div>
 </div>
