--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= project.id %></td>
   <td><span><%= project.name %></span></td>
-  <td><%= number_with_precision(project.sum_man_month, precision: 2) %></td>
+  <td><%= project.calculate_project_resource_man_per_month params[:month_year] %></td>
   <td><%= link_to t("resources.table.detail"), resource_path(project) %></td>
   <td><%= format_date project.start_date %></td>
 </tr>
