--- a/app/views/projects/_project_health.html.erb
+++ b/app/views/projects/_project_health.html.erb
@@ -1,13 +1,24 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title"><%= t "projects.show.Project_Health" %></h3>
+      <div class="card-title row">
+        <div class="col-sm-8"><h3><%= t "projects.show.Project_Health" %></h3></div>
+        <div class="col-sm-4">
+          <%= link_to new_health_path(project_id: @project.id), class: "btn btn-primary btn-sm" do %>
+            <i class="fa fa-plus"></i> <%= t ".update_health" %>
+          <% end %>
+        </div>
+      </div>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <div class="table-responsive">
             <table class="table table-striped table-product">
               <tbody>
+              <% if @project.project_health_items.present? %>
                 <%= render @project.project_health_items %>
+              <% else %>
+                <%= t ".not_have_health" %>
+              <% end %>
               </tbody>
             </table>
           </div>
