task #68889: list checklist

--- a/app/views/health/new.html.erb
+++ b/app/views/health/new.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, t(".health_index") %>
 <div class="card">
   <div class="card-body p-6">
     <%= form_with url: health_index_path, method: :post do |f| %>
