--- a/app/views/projects/_project_health.html.erb
+++ b/app/views/projects/_project_health.html.erb
@@ -1,17 +1,18 @@
-<div class="container mt-5 px-2">
-  <div class="table-responsive">
-    <table class="table table-responsive table-borderless">
-
-      <thead>
-        <tr class="bg-light">
-          <th scope="col" class="w-50"><%= t ".health_item_name" %></th>
-          <th scope="col" class="w-50"><%= t ".status" %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render @project.project_health_items %>
-      </tbody>
-    </table>
-
+<div class="container">
+  <div class="card">
+    <div class="card-body">
+      <h3 class="card-title"><%= t "projects.show.Project_Health" %></h3>
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="table-responsive">
+            <table class="table table-striped table-product">
+              <tbody>
+                <%= render @project.project_health_items %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
