--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,5 @@
 <% provide :title, t(".edit_project") %>
+<h1 class="d-flex fw-bold justify-content-center mb-8"><%= t("projects.edit.edit_project")%></h1>
 <% content_for :button_text do %>
   <% t "project.form.submit" %>
 <% end %>
