--- a/app/views/resources/_form_resources.html.erb
+++ b/app/views/resources/_form_resources.html.erb
@@ -1,22 +1,22 @@
 <%= form_with model: @project, url: resources_path, method: :post do |f| %>
   <%= f.hidden_field :id, value: @project.id %>
-  <div class="mb-3">
+  <div class="mb-3" style="width: 66%; margin: auto;">
     <div class="my-2" data-controller="nested-rondo" data-associated-with="project_user_resources">
       <div data-nested-rondo-target="fieldContain">
         <%= f.fields_for :project_user_resources, @project.project_user_resources.filter_month(@month).filter_year(@year) do |detail| %>
           <%= render "project_user_resource_fields", f: detail %>
         <% end %>
       </div>
-      <div class="links ms-10">
-        <%= link_to_add_association f, :project_user_resources do %>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="bi bi-plus-circle" width="1.5em" height="1.5em" data-association="project_user_resources" >
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" data-association="project_user_resources" />
-          </svg>
+      <div class="links row justify-content-center p-0">
+        <%= link_to_add_association f, :project_user_resources, class: "rounded-circle btn-outline-primary  btn w-auto row justify-content-center p-0" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="bi bi-plus-circle p-0" width="2em" height="2em" data-association="project_user_resources" >
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" data-association="project_user_resources" />
+            </svg>
         <% end %>
       </div>
     </div>
-    <div class= "col-9 mx-auto">
-      <%= f.submit t(".save"), class: "btn btn-primary w-100" %>
+    <div class="row mt-3 justify-content-center">
+      <%= f.submit t(".save"), class: "btn btn-primary", style: "width: 80%" %>
     </div>
   </div>
 <% end %>
