--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,25 +1,25 @@
 .text-bg-new {
-  background-color: green;
+  background-color: green!important;
   color: white;
 }
 
 .text-bg-in_progress {
-  background-color: orange;
+  background-color: orange!important;
   color: white;
 }
 
 .text-bg-maintaining {
   color: white;
-  background-color: blue;
+  background-color: blue!important;
 }
 
 .text-bg-pending {
-  background-color: #FFD700;
+  background-color: #FFD700!important;
   color: white;
 }
 
 .text-bg-close {
-  background-color: red;
+  background-color: red!important;
   color: white;
 }
 
@@ -31,4 +31,41 @@
 .text-bg-preparing {
   background-color: orange;
   color: white;
+}
+
+.border-left-primary {
+  border-left: .25rem solid #4e73df!important;
+}
+
+.border-left-success {
+  border-left: .25rem solid #1cc88a!important;
+}
+
+.border-left-warning {
+  border-left: .25rem solid #f6c23e!important;
+}
+
+.border-left-danger {
+  border-left: .25rem solid #e74a3b!important;
+}
+
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.mr-2, .mx-2 {
+  margin-right: .5rem!important;
+}
+
+.text-xs {
+  font-size: .7rem;
+}
+
+.font-weight-bold {
+  font-weight: 700!important;
+}
+
+.float-right {
+  float: right!important;
 }
