--- a/app/views/dashboard/_search.html.erb
+++ b/app/views/dashboard/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: value_resources_path, method: :get, class: "row g-4 pb-4" do |f| %>
+<%= form_with url: root_url, method: :get, class: "row g-4 pb-4" do |f| %>
   <div class="col-auto">
     <%= f.label :name,  t("project.form.name"), class: "form-label" %>
     <%= f.text_field :name, value: params[:name], class: "form-control" %>
@@ -23,14 +23,8 @@
   </div>
   <div class="col-auto">
     <label class="form-label invisible">invisible label</label>
-    <%= link_to value_resources_path, class: "btn btn-secondary form-control" do %>
+    <%= link_to root_url, class: "btn btn-secondary form-control" do %>
       <i class="bi bi-arrow-counterclockwise"></i>
     <% end %>
-  </div>
-
-  <div class="col-auto ms-auto">
-    <label class="form-label invisible">invisible label</label>
-    <%= link_to t("value_resources.index.export"), value_resources_path(format: :xlsx, name: params[:name], group_id: params[:group_id],
-                                                   status: params[:status]), class: "btn btn-secondary form-control" %>
   </div>
 <% end %>
