--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <footer class="py-5">
     <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>© 2023 Sun-asterisk Inc. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
+      <ul class="list-unstyled d-flex invisible">
         <li class="ms-3">
           <a class="link-body-emphasis" href="#">
             <i class="bi bi-github"></i>
