--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,7 +52,7 @@
       <div class="vr bg-gray-700 mx-2 mx-lg-3"></div>
       <!-- Button -->
       <a
-        class="d-flex align-items-center justify-content-center bg-white rounded-circle shadow-sm mx-1 mx-lg-2 w-40px h-40px position-relative link-secondary"
+        class="d-flex align-items-center justify-content-center bg-white rounded-circle shadow-sm mx-1 mx-lg-2 w-40px h-40px position-relative link-secondary d-none"
         data-bs-toggle="offcanvas"
         href="#offcanvasNotifications"
         role="button"
@@ -67,7 +67,7 @@
       </a>
       <!-- Notifications offcanvas -->
       <div
-        class="offcanvas offcanvas-end"
+        class="offcanvas offcanvas-end d-none"
         tabindex="-1"
         id="offcanvasNotifications"
         aria-labelledby="offcanvasNotificationsLabel"
@@ -766,7 +766,7 @@
         </div>
       </div>
       <!-- Dropdown -->
-      <div class="dropdown">
+      <div class="dropdown d-none">
         <a
           href="javascript: void(0);"
           class="dropdown-toggle no-arrow d-flex align-items-center justify-content-center bg-white rounded-circle shadow-sm mx-1 mx-lg-2 w-40px h-40px link-secondary"
@@ -1280,7 +1280,7 @@
       </div>
       <!-- Button -->
       <a
-        class="d-flex align-items-center justify-content-center bg-white rounded-circle shadow-sm mx-1 mx-lg-2 w-40px h-40px link-secondary"
+        class="d-flex align-items-center justify-content-center bg-white rounded-circle shadow-sm mx-1 mx-lg-2 w-40px h-40px link-secondary d-none"
         data-bs-toggle="offcanvas"
         href="#offcanvasCustomize"
         role="button"
@@ -1665,7 +1665,7 @@
         </div>
       </div>
       <!-- Separator -->
-      <div class="vr bg-gray-700 mx-2 mx-lg-3"></div>
+      <div class="vr bg-gray-700 mx-2 mx-lg-3 d-none"></div>
       <!-- Dropdown -->
       <div class="dropdown">
         <a
