filter resource by month, year

--- a/app/views/resources/_form_resources.html.erb
+++ b/app/views/resources/_form_resources.html.erb
@@ -15,7 +15,8 @@
         <% end %>
       </div>
     </div>
-  <div class= "col-9 mx-auto">
-    <%= f.submit t(".save"), class: "btn btn-primary w-100" %>
+    <div class= "col-9 mx-auto">
+      <%= f.submit t(".save"), class: "btn btn-primary w-100" %>
+    </div>
   </div>
 <% end %>
