--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,7 +5,7 @@
   >
     <div class="container-fluid">
       <!-- Brand -->
-      <%= link_to "Project Management", root_path, class: "navbar-brand
+      <%= link_to t("application.project_management"), root_path, class: "navbar-brand
       text-center" %>
       <!-- Navbar toggler -->
       <ul class="navbar-nav">
