--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -35,11 +35,11 @@
     <label for="report_issue" class="form-label required"><%= t ".issue" %></label>
     <%= f.text_area :issue,
                     class: "form-control #{invalid @report, :issue}",
-                    rows: "2" %>
+                    rows: "3" %>
     <p class="error"><%= show_errors @report, :issue %></p>
   </div>
 
   <div class="d-flex justify-content-center">
-    <%= f.submit t(".save"), class: "btn btn-primary btn-block w-30 mt-3 form-control" %>
+    <%= f.submit t(".save"), class: "btn btn-primary btn-block btn-md w-50 mt-3 form-control" %>
   </div>
 <% end %>
