--- a/app/views/projects/_projects_form.html.erb
+++ b/app/views/projects/_projects_form.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="mb-3">
       <%= f.label :description, t("project.form.description"), class: "form-label" %>
-      <%= f.text_area :description, class: "form-control #{invalid(@project, :description)}" %>
+      <%= f.text_area :description, class: "form-control #{invalid(@project, :description)}", rows: "3" %>
       <p class="error"><%= show_errors(@project, :description) %></p>
     </div>
     <div class="mb-3 row justify-content-between">
