--- a/app/views/release_plans/_form.html.erb
+++ b/app/views/release_plans/_form.html.erb
@@ -1,35 +1,36 @@
 <%= form_for @release_plan do |f| %>
-  <div class="form-row">
-    <div class="form-group col-md-4">
-      <label class="required" for="release_plan_project_id"><%= t ".choose_project" %></label>
+  <div class="d-flex justify-content-between">
+    <div class="form-group col-3">
+      <label class="required form-label" for="release_plan_project_id"><%= t ".choose_project" %></label>
       <%= f.collection_select :project_id, @projects, :id, :name, {},
                               {class: "form-control #{invalid @release_plan, :project_id}"} %>
       <p class="error"><%= show_errors @release_plan, :project_id %></p>
     </div>
 
-    <div class="form-group col-md-4 ml-35">
-      <label class="required" for="release_plan_release_date"><%= t ".choose_day" %></label>
+    <div class="form-group col-md-3">
+      <label class="required form-label" for="release_plan_release_date"><%= t ".choose_day" %></label>
       <%= f.date_field :release_date, value: date_field_value(@release_plan.release_date),
                        class: "form-control #{invalid @release_plan, :release_date}" %>
       <p class="error"><%= show_errors @release_plan, :release_date %></p>
     </div>
+
+    <div class="form-group col-md-3">
+    <label class="required form-label" for="release_plan_is_released"><%= t ".status" %></label>
+    <%= f.select :is_released, list_status, {},
+                            {class: "form-control #{invalid @release_plan, :is_released}"} %>
+    <p class="error"><%= show_errors @release_plan, :is_released %></p>
+  </div>
   </div>
 
   <div class="form-group">
-    <label class="required" for="release_plan_description"><%= t ".scope_release_description" %></label>
+    <label class="required form-label" for="release_plan_description"><%= t ".scope_release_description" %></label>
     <%= f.text_area :description,
                     class: "form-control #{invalid @release_plan, :description}",
                     rows: "3" %>
     <p class="error"><%= show_errors @release_plan, :description %></p>
   </div>
 
-  <div class="form-group w-50">
-    <label class="required" for="release_plan_is_released"><%= t ".status" %></label>
-    <%= f.select :is_released, list_status, {},
-                            {class: "form-control #{invalid @release_plan, :is_released}"} %>
-    <p class="error"><%= show_errors @release_plan, :is_released %></p>
-  </div>
-  <div class="d-flex justify-content-end">
-    <%= f.submit t(".save"), class: "btn btn-primary btn-block w-30" %>
+  <div class="d-flex justify-content-center">
+    <%= f.submit t(".save"), class: "btn btn-primary btn-block w-30 form-control w-50 mt-3" %>
   </div>
 <% end %>
