--- a/app/views/release_plans/show.html.erb
+++ b/app/views/release_plans/show.html.erb
@@ -4,7 +4,7 @@
       <h1 class="mb-3 text-center"><%= @release_plan.project_name %></h1>
         <%= render "release_plan_detail" %>
       <div class="d-flex justify-content-center align-items-center">
-        <%= link_to t(".close"), "#", class: "btn btn-danger btn-lg ", data: {
+        <%= link_to t(".close"), "#", class: "btn btn-danger btn-md w-50 ", data: {
           controller: "modals",
           action: "modals#close"
         } %>
