--- a/app/views/month_project_features/index.html.erb
+++ b/app/views/month_project_features/index.html.erb
@@ -1,27 +1,28 @@
 <% provide :title, t(".project_feature_index") %>
-<div class="container">
+<div class="container d-flex flex-column align-items-center">
   <h1 class="text-center mb-8 fw-bold"><%= t ".list_value" %></h1>
-  <div class="form-group justify-content-center">
-    <%= form_with url: project_month_project_features_path(@project), method: :get do |f| %>
-      <label class="form-label">
-        <%= t "project_features.index.name" %>
-        <input value="<%= @project.name %>" class="form-control" disabled/>
-      </label>
-      <label class="form-label ml-35">
-        <%= t ".select_month_year" %>
-        <%= f.date_field :month_year, type: "month", value: month_field_value(params[:month_year]), class: "form-control" %>
-      </label>
-      <%= f.submit t(".search"), name: nil, class: "btn btn-primary btn-block w-30 ml-35" %>
-    <% end %>
+  <div class="container w-75">
+    <div class="form-group">
+      <%= form_with url: project_month_project_features_path(@project), method: :get do |f| %>
+        <label class="form-label">
+          <%= t "project_features.index.name" %>
+          <input value="<%= @project.name %>" class="form-control" disabled/>
+        </label>
+        <label class="form-label ml-35">
+          <%= t ".select_month_year" %>
+          <%= f.date_field :month_year, type: "month", value: month_field_value(params[:month_year]), class: "form-control" %>
+        </label>
+        <%= f.submit t(".search"), name: nil, class: "btn btn-primary btn-block w-30 ml-35" %>
+      <% end %>
+    </div>
+    <ul class="list-group">
+      <%= render @project_features %>
+    </ul>
+    <section class="mt-5">
+      <%= turbo_frame_tag "summary" do %>
+        <p><%= t ".time_total", hour_total: effort_hour_month_total(@project_features) %></p>
+        <p><%= t ".man_month_total", man_month: man_month_total(@project_features) %></p>
+      <% end %>
+    </section>
   </div>
-  <ul class="list-group">
-    <%= render @project_features %>
-  </ul>
-
-  <section class="mt-5">
-    <%= turbo_frame_tag "summary" do %>
-      <p><%= t ".time_total", hour_total: effort_hour_month_total(@project_features) %></p>
-      <p><%= t ".man_month_total", man_month: man_month_total(@project_features) %></p>
-    <% end %>
-  </section>
 </div>
