--- a/app/views/project_features/_project_feature.html.erb
+++ b/app/views/project_features/_project_feature.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag project_feature do %>
-  <li class="list-group-item px-3 border-2 rounded-3 mb-3 w-75">
+  <li class="list-group-item px-3 border-2 rounded-3 mb-3">
     <div class="card border-0">
       <h5 class="card-header"><%= project_feature.name %></h5>
       <div class="card-body">
