--- a/app/views/project_users/new.html.erb
+++ b/app/views/project_users/new.html.erb
@@ -6,7 +6,7 @@
     <% end %>
     <% flash.each do |message_type, message| %>
       <% unless message_type == "success" %>
-        <div class="alert alert-<%= message_type %>"><%= message + message_type %></div>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
     <% end %>
     <%= render "form", url: project_users_path(@project) %>
