--- a/app/views/projects/_project_health.html.erb
+++ b/app/views/projects/_project_health.html.erb
@@ -4,24 +4,34 @@
       <div class="card-title row">
         <div class="col-sm-8"><h3><%= t "projects.show.Project_Health" %></h3></div>
         <div class="col-sm-4">
-          <%= link_to new_health_path(project_id: @project.id), class: "btn btn-primary btn-sm" do %>
-            <i class="fa fa-plus"></i> <%= t ".update_health" %>
+          <% if @project.project_health_items.present? %>
+            <%= link_to edit_health_path(@project), data: { turbo_frame: "project-health-body" }, class: "btn btn-primary btn-sm" do %>
+              <i class="fa fa-plus"></i> <%= t ".update_health" %>
+            <% end %>
+          <% else %>
+            <%= link_to new_health_path, data: { turbo: false }, class: "btn btn-primary btn-sm" do %>
+              <i class="fa fa-plus"></i> <%= t ".new_health" %>
+            <% end %>
           <% end %>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-          <div class="table-responsive">
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12">
+        <div class="table-responsive">
+          <%= turbo_frame_tag "project-health-body" do %>
             <table class="table table-striped table-product">
-              <tbody>
+              <tbody id="project-health-body">
               <% if @project.project_health_items.present? %>
                 <%= render @project.project_health_items %>
               <% else %>
-                <%= t ".not_have_health" %>
+                <div class="text-center">
+                  <h4><%= t ".not_have_health" %></h4>
+                </div>
               <% end %>
               </tbody>
             </table>
-          </div>
+          <% end %>
         </div>
       </div>
     </div>
